refactor: move getting favorite persons to the module with persons